--- a/ana.html
+++ b/ana.html
@@ -14,9 +14,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Casino oyunları alanındaki tüm olanaklar Casinoslot farkıyla kullanıcılara sunuluyor. Gerçek bir canlı casino deneyimi yaşamak artık Casinoslot ile mümkün.">
         <meta name="google-site-verification" content="HsvwxVXMxdtK90IyKdfuqZiNGgK6xbCg9KbYiQKosdo">
-        <link rel="icon" type="image/png" sizes="64x64" href="https://www.casinoslot406.com/img/favicon/favicon-64x64.png?20221025-113448">
-        <link rel="icon" type="image/png" sizes="32x32" href="https://www.casinoslot406.com/img/favicon/favicon-32x32.png?20221025-113448">
-        <link rel="icon" type="image/png" sizes="16x16" href="https://www.casinoslot406.com/img/favicon/favicon-16x16.png?20221025-113448">
+        <link rel="icon" type="image/png" sizes="64x64" href="https://www.casinoslot406.com/img/favicon/favicon-64x64.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://www.casinoslot406.com/img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://www.casinoslot406.com/img/favicon/favicon-16x16.png">
         <meta name="data-config" data-affiliate-program="partner">
         <script type="text/javascript"></script>
                 
